# pytorch_template

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  install-CPU.md  install-CUDA.md  install.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose-dev.yml
.github/: dependabot.yml
.github/workflows/: publish-dev-image.yml  requirements.txt.yml
